      and reading files (see #108).
    * WaveBank and event Bank now represent time as an int of nanoseconds, see
      (#131).
    * EventBank now limits the number of obspy Event objects which are held in
      memory during indexing (see #136 and #137).
    * WaveBank.get_gaps_df now accounts for small overlapping file which
      previously caused false gaps to be reported (see #140).
  - obsplus.interfaces
    * Added ProgressBar for defining classes compatible with how obsplus
      uses progress bar, modeled after the ProgressBar class from the
      progressbar2 library (see #106).
  - obsplus.stations
    * Fixed issue where networks and stations could be left un-pruned when
      querying on channel (see #115).
    * Handled an edge case in df_to_inv where an integer NSLC code gets
      misinterpreted by pandas (see #130 and #132).
  - obsplus.utils
    * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
    * get_distance_df now allows dataframes as inputs (#154).
  - obsplus.validate
    * Added the obsplus.validate module which contains a simple framework for
      defining and running validators on python objects. Replaced the old
      event validation (see #122).
    * Added the validators created in (#64) to PR (#122).
  - obsplus.events
    * Dataframe_to_inventory can now fetch NRL responses (#125).
  - obsplus.waveforms
    * Added assert_streams_almost_equal method (see #128).
    * The function obsplus.waveforms.stream_split_bulk now has more flexible
      inputs (see #128).
  - general
    * All obsplus objects now use pandas datetimes and/or numpy datetime64 for
      representing dates and times (see #88 and #131).

obsplus 0.0.2:
  - obsplus.bank
    * Speed up wavebank.get_waveforms_bulk by time-filtering index before
      determining which files to read (see #93).
    * Update time is now set before reading files to update index (#95).
    * add try/except in read index to alleviate test failures with concurrent